[package]
name = "music_shuffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rspotify = {version ="0.9.0"}
tokio = {version = "0.2.0", features = ["full"]}
serde = "1.0"
serde_derive = "1.0"